--- a/trunk/res/layout/date_screen.xml
+++ b/trunk/res/layout/date_screen.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongSpecialParentLayout">
+	style="@style/UsbongSpecialParentLayout"
+	android:id="@+id/parent_layout_id"       	
+	>
 	<ScrollView style="@style/UsbongDefaultScrollView"
 	>		 	
 	<LinearLayout style="@style/UsbongDefaultMainLayout">
@@ -15,20 +17,21 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:prompt="@string/date_month"
-		        android:textSize="24px"
+		        android:textSize="24dp"
 	    	/>
 			<Spinner 
 		        android:id="@+id/date_day_spinner"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:prompt="@string/date_day"
-		        android:textSize="24px"
+		        android:textSize="24dp"
 	    	/>
 			<EditText android:id="@+id/date_edittext"
 			    style="@style/UsbongDefaultTextView"	    	
 			    android:layout_alignParentBottom="true"
 			    android:text="2012" 
 			    android:textColor="#000000"		
+			    android:inputType="number"
 			/>
 		</LinearLayout>
 	</LinearLayout>
