--- a/trunk/res/layout/end_state_screen.xml
+++ b/trunk/res/layout/end_state_screen.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongDefaultParentLayout">	
+	style="@style/UsbongDefaultParentLayout"
+	android:id="@+id/parent_layout_id"       
+	>	
 		<TextView android:id="@+id/end_state_textview"
 		    style="@style/UsbongDefaultTextView"	    	
 		    android:text="@string/UsbongEndStateTextView_ENGLISH"
