--- a/trunk/res/layout/gps_location_screen.xml
+++ b/trunk/res/layout/gps_location_screen.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongEditTextFieldParentLayout"
+	style="@style/UsbongSpecialParentLayout"
 	android:id="@+id/parent_layout_id"       	
 	>
-	
-		<TextView android:id="@+id/textfield_textview"
+	<ScrollView style="@style/UsbongDefaultScrollView"
+	>		 	
+	<LinearLayout style="@style/UsbongTextImageMainLayout">
+		<TextView android:id="@+id/gps_location_textview"
 		    style="@style/UsbongDefaultTextView"	    	
 		    android:text="@string/default_textview" 
-	    	android:layout_marginTop="16px"/>
-		/>	
-		    
-		<EditText android:id="@+id/textfield_edittext"
-			style="@style/UsbongDefaultEditText"	
-		    android:layout_alignParentBottom="true"
 		/>
+		<TextView android:id="@+id/longitude_textview"
+		    style="@style/UsbongDefaultTextView"	    	
+		    android:text="@string/loading_long_textview" 
+		/>
+		<TextView android:id="@+id/latitude_textview"
+		    style="@style/UsbongDefaultTextView"	    	
+		    android:text="@string/loading_lat_textview" 
+		/>			    
+	</LinearLayout>	
+	</ScrollView>	    	        
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
