--- a/trunk/res/layout/photo_capture_screen.xml
+++ b/trunk/res/layout/photo_capture_screen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongImageViewerParentLayout">
-	<ScrollView android:isScrollContainer="true"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:layout_weight="0.6">		
+	style="@style/UsbongImageViewerParentLayout"
+	android:id="@+id/parent_layout_id"       	
+	>
+	<ScrollView 
+	    style="@style/UsbongDefaultScrollView">		
 		<LinearLayout style="@style/UsbongPhotoCaptureMainLayout">	 		
 			<TextView android:id="@+id/photo_capture_textview"
 			    style="@style/UsbongDefaultTextView"	    	
