--- a/trunk/res/layout/text_display_screen.xml
+++ b/trunk/res/layout/text_display_screen.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongEditTextFieldParentLayout"
-	android:id="@+id/parent_layout_id"       	
+	style="@style/UsbongSpecialParentLayout"
+	android:id="@+id/parent_layout_id"       
 	>
-	
-		<TextView android:id="@+id/textfield_textview"
+	<ScrollView style="@style/UsbongDefaultScrollView"
+	>		 	
+	<LinearLayout style="@style/UsbongDefaultMainLayout">
+		<TextView android:id="@+id/special_textview"
 		    style="@style/UsbongDefaultTextView"	    	
 		    android:text="@string/default_textview" 
-	    	android:layout_marginTop="16px"/>
-		/>	
-		    
-		<EditText android:id="@+id/textfield_edittext"
-			style="@style/UsbongDefaultEditText"	
-		    android:layout_alignParentBottom="true"
+		    android:layout_alignParentBottom="true"	    			
 		/>
+	</LinearLayout>
+	</ScrollView>	    	    
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
