--- a/trunk/res/layout/textfield_with_unit_screen.xml
+++ b/trunk/res/layout/textfield_with_unit_screen.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongEditTextFieldParentLayout">
+	style="@style/UsbongEditTextFieldParentLayout"
+	android:id="@+id/parent_layout_id"       	
+	>
 	
 		<TextView android:id="@+id/textfield_textview"
 		    style="@style/UsbongDefaultTextView"	    	
