--- a/trunk/res/layout/video_from_file_screen.xml
+++ b/trunk/res/layout/video_from_file_screen.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongEditTextFieldParentLayout"
-	android:id="@+id/parent_layout_id"       	
+	style="@style/UsbongSpecialParentLayout"
+	android:id="@+id/parent_layout_id"       
 	>
-	
-		<TextView android:id="@+id/textfield_textview"
-		    style="@style/UsbongDefaultTextView"	    	
-		    android:text="@string/default_textview" 
-	    	android:layout_marginTop="16px"/>
-		/>	
-		    
-		<EditText android:id="@+id/textfield_edittext"
-			style="@style/UsbongDefaultEditText"	
-		    android:layout_alignParentBottom="true"
+	<LinearLayout style="@style/UsbongSpecialImageMainLayout">
+		<VideoView android:id="@+id/video_from_file_videoview"
+		    style="@style/UsbongDefaultImageView"	    	
 		/>
+	</LinearLayout>
 	<LinearLayout
 		style="@style/UsbongDefaultBackNextButtonLayout">	
 	    <Button android:id="@+id/back_button"
