--- a/trunk/res/values/usbongStyle.xml
+++ b/trunk/res/values/usbongStyle.xml
@@ -289,14 +289,19 @@
     
     
     <style name="UsbongTitleStartButton">
-		<item name="android:layout_width">200px</item>
+		<item name="android:layout_width">300dp</item>
 		<item name="android:layout_height">wrap_content</item>
     </style>	           
     
     <style name="UsbongAudioRecorderButton">
-		<item name="android:layout_width">200px</item>
+		<item name="android:layout_width">300dp</item>
 		<item name="android:layout_height">wrap_content</item>
-    </style>	               
+		<item name="android:textColor">#4a452a</item>
+		<item name="android:textSize">20px</item>		
+		<item name="android:layout_gravity">center</item>
+		<item name="android:background">@drawable/button_yellow</item>	
+		<item name="android:layout_marginBottom">5dp</item>		
+	</style>	               
     
     <style name="UsbongAudioPlayerButton">
 		<item name="android:layout_width">200px</item>
@@ -331,8 +336,13 @@
     </style>	                       
     
     <style name="UsbongPhotoCaptureButton">
-		<item name="android:layout_width">200px</item>
-		<item name="android:layout_height">wrap_content</item>		
+		<item name="android:layout_width">300dp</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textColor">#4a452a</item>
+		<item name="android:textSize">20px</item>		
+		<item name="android:layout_gravity">center</item>
+		<item name="android:background">@drawable/button_yellow</item>	
+		<item name="android:layout_marginBottom">5dp</item>	
     </style>	    
 
     <style name="UsbongCameraImageView">
