--- a/trunk/res/layout/text_clickable_image_display_screen.xml
+++ b/trunk/res/layout/text_clickable_image_display_screen.xml
@@ -11,7 +11,7 @@
 		    android:text="@string/default_textview" 
 		/>
 	    
-	    <ImageButton android:id="@+id/special_imageview"
+	    <ImageButton android:id="@+id/clickable_image_display_imagebutton"
 		    style="@style/UsbongTextImageDisplayImageView"	    	
 		/>
 	</LinearLayout>	
