--- a/res/values/usbongStyle.xml
+++ b/res/values/usbongStyle.xml
@@ -245,8 +245,8 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">30px</item> 
-        <item name="android:lines">5</item>
+        <item name="android:textSize">22dp</item> 
+        <item name="android:lines">8</item>
         <item name="android:gravity">top|left</item>
 		<item name="android:scrollHorizontally">false</item>        
     </style>	       
